updated java exercises